# randy

./: '  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  justfile  makefile  stash.file
config/: _my_desktop.yml  _randy.toml  _randy.yml  default.yml  randy.toml  randy.yml
configs/: example.toml
docs/: README.md
resources/: app.css
src/: config.rs  css.rs  deets.rs  fs.rs  main.rs  parser.rs  stubs.rs  style.css  style.rs  ui.rs
src/config/: mod.rs
src/ui/: _helpers.rs  css.rs  helpers.rs  mod.rs  style.rs
src/ui/widgets/: mod.rs
static/: app.css
