[package]
name = "randy4"
version = "0.1.0"
authors = ["Mikhail <mpwema782@gmail.com>"]
edition = "2021"
description = "Conky like app in Rust"
homepage = "https://github.com/takimoysha/randy4"
repository = "https://github.com/takimoysha/randy4"
readme = "README.md"
license = "GPL-3.0"
exclude = ["/assets/*", "/scripts/*"]
include = ["resources/*"]

[profile.dev]
opt-level = "s"
debug = 0

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = true
overflow-checks = false

[features]
# runtime_bench = []
# timings = []
# packaged = []
# nvidia = ["nvml-wrapper"]

[dependencies]
gtk4 = "0.9.5"
gio = "0.20.7"
glib = "0.20.7"
libc = "0.2.169"
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }
serde_yml = "0.0.12"
clap = { version = "4.5.27", features = ["derive"] }
# update process ...
lazy_static = "1.4"
sensors = { version = "0.2", optional = true }
nvml-wrapper = { version = "0.10.0", optional = true }
