[package]
name = "sidp"
version = "0.1.0"
authors = ["Mikhail <mpwema782@gmail.com>"]
edition = "2021"
description = "Ala conky for wayland desktop"
homepage = "https://github.com/takimoysha/sidp"
repository = "https://github.com/takimoysha/sidp"
readme = "README.md"
license = "GPL-3.0"
exclude = ["/assets/*", "/scripts/*"]
include = ["resources/*"]

[profile.dev]
opt-level = "s"
debug = 0

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = true
overflow-checks = false

[features]
# runtime_bench = []
# timings = []
# packaged = []
# nvidia = ["nvml-wrapper"]

[dependencies]
gtk = { version = "~0.9", package = "gtk4" }
toml = "~0.8"
serde = { version = "~1.0", features = ["derive"] }
clap = { version = "~4.5", features = ["derive"] }
directories = "6.0.0"
serde-inline-default = "0.2.3"

# update process ...
sensors = { version = "0.2.2", optional = true }
nvml-wrapper = { version = "0.10.0", optional = true }
